--- a/word2vec.ipynb
+++ b/word2vec.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/IAT-ExploringAI-2025/NLP-Week1-Text-Classification/blob/main/word2vec.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xFlayton/NLP-Week1-Text-Classification/blob/main/word2vec.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -228,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "RutaI-Tpev3T"
       },
@@ -259,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "XkJ5299Tek6B"
       },
@@ -293,13 +293,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "bsl7jBzV6_KK",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "65250a30-18d0-49d2-862b-f2a74f918757"
+        "outputId": "3ec20f65-dd0a-45b8-d480-b192e5181646"
       },
       "outputs": [
         {
@@ -326,9 +326,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "POI7HCg0i6j8",
-        "outputId": "57a56653-8fc9-4a8e-a70e-20efe7a05103"
+        "outputId": "c0d39e34-3311-4bef-b255-756e17f09cb2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +338,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 7
         }
       ]
     },
@@ -353,13 +353,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "UdYv1HJUQ8XA",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "13f55ad7-90dc-4814-a699-3ac6523b8651"
+        "outputId": "357bd337-3138-40e0-f4e0-57e095abd6cf"
       },
       "outputs": [
         {
@@ -392,13 +392,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "o9ULAJYtEvKl",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "26a3bad7-26d0-475f-c773-27a5c043f382"
+        "outputId": "210e2b9a-5214-4d28-c748-9a4d7df53c15"
       },
       "outputs": [
         {
@@ -425,13 +425,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "CsB3-9uQQYyl",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d36e141b-eb3c-43ad-fcbe-705e514d556a"
+        "outputId": "fdd24725-37cd-4568-bc6f-ba3929b87d0a"
       },
       "outputs": [
         {
@@ -469,13 +469,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "USAJxW4RD7pn",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2feebd0d-de74-49ab-9864-b6923356cd3f"
+        "outputId": "fb8dcfb8-cc25-438f-9761-bade5891e183"
       },
       "outputs": [
         {
@@ -507,7 +507,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yvKEhgObkFXv",
-        "outputId": "0573b099-6e56-4935-9b27-a3737dead744"
+        "outputId": "0e7a83b7-cf47-4af5-f431-d07eeebb390f"
       },
       "execution_count": null,
       "outputs": [
@@ -515,7 +515,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[5, 3], [2, 3], [3, 1], [2, 1], [4, 5], [3, 5], [7, 6], [6, 7], [4, 2], [6, 1], [4, 1], [7, 1], [2, 4], [4, 3], [5, 6], [1, 3], [5, 4], [1, 4], [6, 5], [3, 2], [1, 7], [1, 5], [1, 6], [1, 2], [3, 4], [5, 1]]\n"
+            "[[5, 6], [4, 1], [4, 2], [7, 6], [1, 6], [3, 2], [3, 1], [4, 3], [5, 1], [6, 1], [4, 5], [1, 5], [1, 3], [5, 4], [6, 7], [5, 3], [2, 1], [1, 4], [7, 1], [2, 4], [6, 5], [3, 4], [3, 5], [1, 2], [2, 3], [1, 7]]\n"
           ]
         }
       ]
@@ -537,18 +537,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1c11e9a7-a19e-49cd-b182-acd1dde9c3c9"
+        "outputId": "26e2be02-9ed6-448b-a240-2f7877e2c8d9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(5, 3): (in, road)\n",
-            "(2, 3): (wide, road)\n",
-            "(3, 1): (road, the)\n",
-            "(2, 1): (wide, the)\n",
-            "(4, 5): (shimmered, in)\n"
+            "(5, 6): (in, hot)\n",
+            "(4, 1): (shimmered, the)\n",
+            "(4, 2): (shimmered, wide)\n",
+            "(7, 6): (sun, hot)\n",
+            "(1, 6): (the, hot)\n"
           ]
         }
       ],
@@ -592,15 +592,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3611da15-9b58-4466-d228-487a34f48e13"
+        "outputId": "9807b9ef-0967-4edc-c51c-9a8a871a279e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tf.Tensor([6 4 2 0], shape=(4,), dtype=int64)\n",
-            "['hot', 'shimmered', 'wide', '<pad>']\n"
+            "tf.Tensor([2 0 3 1], shape=(4,), dtype=int64)\n",
+            "['wide', '<pad>', 'road', 'the']\n"
           ]
         }
       ],
@@ -635,7 +635,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qlKuKLvNsiE-",
-        "outputId": "d37c50f9-5d9e-4f3d-ca1e-af76d660668b"
+        "outputId": "dcf48d84-a27f-4f84-f0f9-1833566f4f68"
       },
       "execution_count": null,
       "outputs": [
@@ -647,7 +647,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 33
         }
       ]
     },
@@ -661,7 +661,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NcqAu4zGluBD",
-        "outputId": "0d21276a-b0f7-4d4f-e63f-3d13147d7d45"
+        "outputId": "cf4462a1-0cac-4d99-de7f-6233b3975842"
       },
       "execution_count": null,
       "outputs": [
@@ -669,11 +669,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(5, 3)"
+              "(5, 6)"
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 46
         }
       ]
     },
@@ -727,9 +727,25 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "tzyCPCuZwmdL"
+        "id": "tzyCPCuZwmdL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2d80d87a-800f-4b09-cb01-0a1ab6cfba25"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "target_index    : 5\n",
+            "target_word     : in\n",
+            "context_indices : [6 2 0 3 1]\n",
+            "context_words   : ['hot', 'wide', '<pad>', 'road', 'the']\n",
+            "label           : [1 0 0 0 0]\n"
+          ]
+        }
+      ],
       "source": [
         "print(f\"target_index    : {target}\")\n",
         "print(f\"target_word     : {inverse_vocab[target_word]}\")\n",
@@ -751,9 +767,23 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "x-FwkR8jx9-Z"
+        "id": "x-FwkR8jx9-Z",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "08c3fed6-1db6-40ad-806e-d33c7ecf972b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "target  : 5\n",
+            "context : tf.Tensor([6 2 0 3 1], shape=(5,), dtype=int64)\n",
+            "label   : tf.Tensor([1 0 0 0 0], shape=(5,), dtype=int64)\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"target  :\", target)\n",
         "print(\"context :\", context)\n",
